kube/file-vault/file-vault-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: file-vault
  labels:
    name: file-vault
    role: service
spec:
  ports:
  - name: http
    port: 10080
  - name: https
    port: 10443
  selector:
    name: file-vault
