kube/file-vault/file-vault-network-policy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: file-vault-allow-ingress
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: ingress-external
    ports:
    - port: 10080
      protocol: TCP
    - port: 10443
      protocol: TCP
  podSelector:
    matchLabels:
      name: file-vault
  policyTypes:
  - Ingress
